--- a/gk.bib
+++ b/gk.bib
@@ -202,17 +202,6 @@ howpublished = {NBER}
   editor =       {S. J. Hanson and Jack D. Cowan and C. Lee Giles}
 }
 
-@article{Abu-Mostafa92,
-  author =       {Y. Abu-Mostafa},
-  title =        {A Method for Learning from Hints},
-  journal =      {Advances in Neural information processings systems
-                  5},
-  volume =       {1992},
-  pages =        {Morgan Kaufmann Publishers},
-  month =        {San Mateo CA},
-  number =       {S. J. Hanson and Jack D. Cowan and C. Lee Giles}
-}
-
 @book{Achen86,
   author =       {Christopher Achen},
   title =        {Statistical Analysis of Quasi-experiments},
@@ -852,16 +841,6 @@ howpublished = {NBER}
 
 @article{BecIch02,
 	author={Sascha O. Becker and Andrea Ichino},
-	title={Estimation of average treatment effects based on propensity scores},
-	journal={The Stata Journal},
-	volume= 2,
-	year= 2002,
-	pages={358-377},
-	number= 4
-}
-
-@article{BecIch02,
-	author={Sascha O. Becker and Andrea Ichino},
 	title={Stata programs for ATT estimation based on propensity score matching},
 	journal={The Stata Journal},
 	volume= 2,
@@ -1074,15 +1053,6 @@ howpublished = {NBER}
 	volume= 5,
 	year= 1959,
 	pages={1-15}
-}
-
-@article{BenSin99,
-	author={S.K. Benara and Padam Singh},
-	title={Validity of Causes of Infant Death by Verbal Autopsy},
-	journal={Indian Journal of Pediatrics},
-	volume={66},
-	year={1999},
-	pages={647-650}
 }
 
 @article{BenSin99,
@@ -1746,14 +1716,6 @@ howpublished = {NBER}
 	volume= 91,
 	year= 1996,
 	pages={14--28}
-}
-
-@unpublished{Breyer04,
-	author={L.A. Breyer},
-	title={The Dbacl Text Classifier},
-	note={laird@lbreyer.com},
-	year={04},
-	month={June}
 }
 
 @unpublished{Breyer04,
@@ -2796,16 +2758,6 @@ howpublished = {NBER}
 	number= 4
 }
 
-@article{DavAlbCoo03,
-	author={G.L. Davis and J.E. Albright and S.F. Cook and D.M. Rosenberg},
-	title={Projecting Future Complications of Chornic Hepatitis C in the United States},
-	journal={Liver Transplantation},
-	volume= 9,
-	year= 2003,
-	pages={331--338},
-	number= 4
-}
-
 @unpublished{DavLawPen03,
 	author={Kushal Dave and Steve Lawrence and David Pennock},
 	title={Mining the Peanut Gallery: Opinion Extraction and Semantic Classification
@@ -3184,15 +3136,6 @@ howpublished = {NBER}
 }
 
 @article{Doorn98,
-	author={Carol Van Doorn },
-	title={Spouse-rated limitations and spouse-rated life expectancy as mortality predictors},
-	journal={Journal of Gerontolofy: Social Sciences},
-	volume={{53B}},
-	year= 1998,
-	pages={{S137-143}}
-}
-
-@article{Doorn98,
 	author={Carol van Doorn},
 	title={Spouse-Raetd Limitations and Spouse Rated Life Expectancy as Mortality Predictors},
 	journal={Journal of Gerontology},
@@ -3289,13 +3232,6 @@ howpublished = {NBER}
 	volume= 18,
 	year= 1953,
 	pages={665-666}
-}
-
-@unpublished{DurRicWar03,
-	author={Stephen D. Durbin and J. Neal Richter and Doug Warner},
-	title={A System for Affective Rating of Texts},
-	note={RightNow Technolgies, Bozeman, MT},
-	year={03}
 }
 
 @unpublished{DurRicWar03,
@@ -3715,19 +3651,6 @@ howpublished = {NBER}
 	number={3}
 }
 
-@article{FanFotBer06,
-	author={Mesganaw Fantahun and Edward Fottrell and Yemane Berhane and Stig Wall and
-		Ulf Hogberg and Peter Byass},
-	title={Assessing a new approach to verbal autopsy interpretation in a rural Ethiopian
-		community: the InterVA model},
-	journal={Bulletin of the World Health Organization},
-	volume={84},
-	year={2006},
-	pages={204-210},
-	month={March},
-	number={3}
-}
-
 @article{Fantahun98,
 	author={Mesganaw Fantahun},
 	title={Patters of Childhood Mortality in Three Districts of North Gondar Administrative
@@ -3767,13 +3690,6 @@ howpublished = {NBER}
 	year= 2001,
 	pages={771--980},
 	number= 4
-}
-
-@unpublished{Fernandezval05,
-	author={Ivan Fernandez-Val},
-	title={Bias Correcion in Panel Data Models with Individual Specific Parameters},
-	note={Boston University},
-	year={2005}
 }
 
 @unpublished{Fernandezval05,
@@ -3968,17 +3884,6 @@ howpublished = {NBER}
 	pages={323-331}
 }
 
-@article{FreChrKha05,
-	author={James V. Freeman and Parul Christian and Subarna K. Khatry and Ramesh K.
-		Adhikari and Steven C. LeClerq and Joanne Katz and Gary L. Darmstadt},
-	title={Evaluation of neonatal verbal autopsy using physician review versus algorithm-based
-		cause-of-death assignment in rural Nepal},
-	journal={Paediatric and Perinatal Epidemiology},
-	volume={19},
-	year={2005},
-	pages={323-331}
-}
-
 @article{Freedman08,
   author =	 {David A. Freedman},
   year =	 2008,
@@ -4080,14 +3985,6 @@ howpublished = {NBER}
 	month={August}
 }
 
-@unpublished{FriHol05,
-	author={John N. Friedman and Richard T. Holden},
-	title={The Rising Incumbent Advantage: What's Gerrymandering Got to Do With It?},
-	note={Dept. of Economics, Harvard; rholden@fas.harvard.edu},
-	year={2005},
-	month={August}
-}
-
 @article{FriKroNew98,
 	author={Linda P. Fried, Md, MPH, Richard A. Kronmal, PhD, Anne B. Newman, MD, PhD,
 		et al},
@@ -4156,17 +4053,6 @@ howpublished = {NBER}
 }
 
 @article{GaiMarCar96,
-	author={Mitchell H. Gail and Steven D. Mark and Raymond J. Carroll and Sylvan B.
-		Green and David Pee},
-	title={On Design Considerations and Randomization-Based Inference for Community
-		Intervention Trials},
-	journal={Statistics in Medicine},
-	volume={15},
-	year={1996},
-	pages={1069-1092}
-}
-
-@article{GaiMarCar96,
 	author={Mitchell H. Gail and Steven D. Mark and Raymond j. Carroll and Sylvan B.
 		Green and David Pee},
 	title={On Design Considerations and Randomization-Based Inference for Community
@@ -4197,16 +4083,6 @@ howpublished = {NBER}
 	year={2004},
 	month={October},
 	number={47}
-}
-
-@article{GajPetKan02,
-	author={Vendhan Gajalakshmi and Richard Peto and Santhanakrishnan Kanaka and Sivagurunathan
-		Balasubramanian},
-	title={Verbal autopsy of 48000 adult deaths attributable to medical causes in Chennai
-		(formerly Madras), India},
-	journal={BMC Public Health},
-	volume={2},
-	year={2002}
 }
 
 @article{GajPetKan02,
@@ -4347,15 +4223,6 @@ howpublished = {NBER}
 }
 
 @article{GelSmi90,
-	author={{Gelfand, A.E. and Smith, A.F.M.}},
-	title={Sampling-based approach to calculating marginal densities},
-	journal= jasa,
-	volume= 85,
-	year= 1990,
-	pages={398--409}
-}
-
-@article{GelSmi90,
 	author={A.E. Gelfand and A.F.M. Smith},
 	title={Sampling-based approaches to calculating marginal densities},
 	journal={Journal of the American Statistical Association},
@@ -4425,16 +4292,6 @@ howpublished = {NBER}
 	year={2006},
 	pages={336-42},
 	number={2}
-}
-
-@techreport{Geyer05,
-	author={Charles J. Geyer},
-	title={Le Cam Made Simple: Asymptotics of Maximum Likelihood without the LLN or
-		CLT or Sample Size Going to Infinity},
-	institution={University of Minnesota},
-	year={2005},
-	month={May},
-	address={Univ. MN, Twin Cities, School of Statistics}
 }
 
 @techreport{Geyer05,
@@ -5820,17 +5677,6 @@ howpublished = {NBER}
 }
 
 @article{HoeMadRaf99,
-	author={Jennifer A. Hoeting and David Madigan and Adrian E. Raftery, Adrian E. and
-		Chris T. Volinsky},
-	title={Bayesian Model Averaging: A Tutorial},
-	journal={Statistical Science},
-	volume= 14,
-	year= 1999,
-	pages={382-417},
-	number= 4
-}
-
-@article{HoeMadRaf99,
 	author={J.A. Hoeting and D. Madigan and Adrian E. Raftery and C. T. Volinsky},
 	title={Bayesian Model Averaging: A Tutorial (with discussion)},
 	journal={Statistical Science},
@@ -6241,18 +6087,6 @@ howpublished = {NBER}
 	month={December }
 }
 
-@article{IslRahMah96,
-	author={M. Aminul Islam and M. Mujibur Rahman and D. Mahalanabis and A.K.S. Mahmudur
-		Rahman},
-	title={Death ina Diarrhoeal Cohort of Infants and Young Children Soon After Discharge
-		From Hospital: Risk Factors and Causes by Verbal Autopsy},
-	journal={Journal of Tropical Pediatrics},
-	volume={42},
-	year={1996},
-	pages={342-347},
-	month={December }
-}
-
 @misc{ISO97,
 	author={ISO},
 	title={The Dublin Core Metadata Element Set},
@@ -6518,17 +6352,6 @@ howpublished = {NBER}
 	pages={99-113}
 }
 
-@article{KalHosBur99,
-	author={Henry D. Kalter and Munir Hossain and Gilbert Burnham and Naila Z. Khan
-		and Samir K. Saha and Md Anwar Ali and Robert E. Black},
-	title={Validation of caregiver interviews to diagnose common causes of severe neonatal
-		illness},
-	journal={Paediatric and Perinatal Epidemiology},
-	volume={13},
-	year={1999},
-	pages={99-113}
-}
-
 @article{Kallay84,
 	author={Michael Kallay},
 	title={The Complexity of Incremental Convex Hull Algorithms in Rd.},
@@ -6670,14 +6493,6 @@ howpublished = {NBER}
 	volume= 21,
 	year= 1982,
 	pages={239--252}
-}
-
-@unpublished{KimHov04,
-	author={Soo-Min Kim and Eduard Hovy},
-	title={Determining the Sentiment of Opinions},
-	note={Soo-Min Kim Information Sciences Inst. Univ. of Southern Calif. 4676 Admiralty
-		Way, Marina del Rey, CA 90292-6695; skim@isi.edu},
-	year={04}
 }
 
 @unpublished{KimHov04,
@@ -6834,17 +6649,6 @@ howpublished = {NBER}
 }
 
 @article{KohAlt05,
-	author={Isaac S. Kohane and Russ B Altman},
-	title={Health-Information Altruists --- A Potentially Critical Resource},
-	journal={New England Journal of Medicine},
-	volume= 19,
-	year= 2005,
-	pages={2074--2077},
-	month={November},
-	number= 353
-}
-
-@article{KohAlt05,
 	author={Isaac S. Kohane and Russ B. Altman},
 	title={Health-Information Altruists - A Potentially Critical Resource},
 	journal={New England Journal of Medicine},
@@ -6911,13 +6715,6 @@ howpublished = {NBER}
 	year= 1994,
 	pages={60--65},
 	number= 1
-}
-
-@unpublished{KopSch05,
-	author={Moshe Koppel and Jonathan Schler},
-	title={The Importance of Neutral Examples for Learning Sentiment},
-	note={Dept. of Computer Science Bar-Ilan University, Ramat-Gan Israel koppel,schlerj@cs.biu.ac.il},
-	year={05}
 }
 
 @unpublished{KopSch05,
@@ -7068,15 +6865,6 @@ howpublished = {NBER}
 	pages={79--86},
 	month={March},
 	number= 1
-}
-
-@unpublished{KumAll04,
-	author={Giridhar Kumaran and James Allan},
-	title={Text Classification and Named Entities for New Event Detection},
-	note={Center for Intelligent Information Retreival, Department of Computer Science,
-		Univ of MA, Amherst},
-	year={2004},
-	month={July}
 }
 
 @unpublished{KumAll04,
@@ -7585,15 +7373,6 @@ pages={706-719}
 	address={Cambridge}
 }
 
-@unpublished{LeuSia03,
-	author={E. Leuven and B. Sianesi},
-	title={psmatch2},
-	note={{Stata module to perform full {M}ahalanobis and propensity score matching,
-		common support graphing, and covariate imbalance testing. Available at:
-		http://www1.fee.uva.nl/scholar/mdw/leuven/stata}},
-	year= 2003
-}
-
 @misc{LeuSia04,
 	author={Edwin Leuven and Barbara Sianesi},
 	title={PSMATCH2: Stata module to perform full Mahalanobis and propensity score
@@ -7649,17 +7428,6 @@ pages={706-719}
 	month={February 24, A17}
 }
 
-@incollection{Lewis05,
-	author={Maureen Lewis},
-	title={Improving Efficiency and Impact in Health Care Services: Lessons from Central
-		America},
-	booktitle={Health Systems Innovation in Central America},
-	publisher={The World Bank},
-	year= 2005,
-	address={Washington, D.C.},
-	editor={Gerard M. La Forgia}
-}
-
 @inbook{Lewis05,
 	author={Maureen Lewis},
 	title={Health Sysems Innovatin in Central American},
@@ -7686,14 +7454,6 @@ pages={706-719}
 	volume={18},
 	year={1999},
 	pages={1903-1904}
-}
-
-@article{LewLev89,
-	author={R.A. Lew and P.S. Levy},
-	title={Estimation of prevalence on the basis of screening tests},
-	journal={Statistics in Medicine},
-	volume={8},
-	year={1989}
 }
 
 @article{LewLev89,
@@ -7808,15 +7568,6 @@ pages={706-719}
 	pages={944-952},
 	month={November},
 	number={4}
-}
-
-@article{LitAn04,
-	author={Roderick Little and Hyonggin An},
-	title={Robust Likelihood-Based Analysis of Multivariate Data with Missing Values},
-	journal={Statistica Sinica},
-	volume={14},
-	year={2004},
-	pages={949-968}
 }
 
 @article{LitAn04,
@@ -8255,17 +8006,6 @@ pages={706-719}
 }
 
 @article{ManSzoKoh01,
-  author =	 {Mandl, K.D. and Szolovits, P. and Kohane, I.S.},
-  title =	 {{Public standards and patients' control: how to keep
-                  electronic medical records accessible but private}},
-  journal =	 {BMJ},
-  volume =	 {322},
-  year =	 {2001},
-  pages =	 {283--7},
-  number =	 {7281}
-}
-
-@article{ManSzoKoh01,
 	author={Kenneth D. Mandl and Peter Szolovits and Isaac S. Kohane},
 	title={Public standards and patients' control: how to keep electronic medical records
 		accessible but private},
@@ -8375,37 +8115,12 @@ pages={706-719}
 	number={4}
 }
 
-@article{MarHusLob95,
-	author={David Marsh and Khatidja Husein and Melvyn Lobo and Mehboob Ali Shah and
-		Stephen Luby},
-	title={Verbal autopsy in Karachi slums: comparing single and multiple cause of
-		child deaths},
-	journal={Health Policy and Planning},
-	volume={10},
-	year={1995},
-	pages={395-403},
-	number={4}
-}
-
 @book{MarKenBib79,
 	author={K. V. Mardia and J. T. Kent and J. M. Bibby},
 	title={Multivariate Analysis},
 	publisher= ap,
 	year={1979},
 	address={London}
-}
-
-@article{MarMajRas93,
-	author={David Marsh and Nuzhat Majit and Zeba Rasmussen and Khalid Mateen and Arif
-		Amin Khan},
-	title={Cause-Specific Child Mortality In A Mountainous Community In Pakistan By
-		Verbal Autopsy},
-	journal={Journal of the Pakistan Medical Association},
-	volume={43},
-	year={1993},
-	pages={226-229},
-	month={November},
-	number={11}
 }
 
 @article{MarMajRas93,
@@ -8931,14 +8646,6 @@ pages={706-719}
 	year={2002}
 }
 
-@unpublished{MorYamTat02,
-	author={Satoshi Morinaga and Kenji Yamanishi and Kenji Tateishi and Toshikazu Fukushima},
-	title={Mining Product Reputations on the Web},
-	note={Satoshi Morinaga and Kenji Yamanishi NEC Corp. 4-1-1 Miyazaki Miyamae Kawasaki
-		Kanagawa 216-8555 Japan Tel: 81-44-856-2143; morinaga@cw.jp.nec.com},
-	year={2002}
-}
-
 @article{MosSha82,
 	author={Jana Mossey MPH, PhD, and Evelyn SHapira, MA},
 	title={Self-Rated Health: A Predictor of Mortality Among the Elderly},
@@ -9055,15 +8762,6 @@ pages={706-719}
 	year={1991},
 	pages={1393--1405},
 	number={4}
-}
-
-@unpublished{NasYi03,
-	author={Tetsuya Nasukawa and Jeonghee Yi},
-	title={Sentiment Analysis: Capturing Favoriability Using Natural Language Processing},
-	note={Tetsuya Nasukawa IBM Research, Tokyo Research Laboratory 1623-14 Shimotsuruma,
-		Yamato-shi, Kanagawa-ken, 242-8502, Japan; nasukawa@jp.ibm.cop},
-	year={2003},
-	month={October}
 }
 
 @unpublished{NasYi03,
@@ -9265,16 +8963,6 @@ pages={706-719}
 	year= 1997,
 	pages={106--127},
 	number={3/4}
-}
-
-@article{OkoDev01,
-	author={Ike S. Okosun and G.E. Alan Dever},
-	title={Verbal Autopsy: A Necessary Solution for the Paucity of Mortality Data in
-		the Less-Developed Countries},
-	journal={Ethnicity and Disease},
-	volume={11},
-	year={2001},
-	pages={575-577}
 }
 
 @article{OkoDev01,
@@ -9667,15 +9355,6 @@ pages={706-719}
 	year= 1988,
 	pages={436--440},
 	month={21 October}
-}
-
-@unpublished{Pole06a,
-  author =	 {Antoinette Pole},
-  title =	 {Congressional Blogging: Advertising, Credit
-                  Claiming, & Position Taking},
-  note =	 {Presented at the 2006 annual meeting of the American
-                  Political Science Association, Philadelphia, PA},
-  address =	 {Antoinette_Pole@brown.edu}
 }
 
 @article{Pole06a,
@@ -10101,17 +9780,6 @@ pages={706-719}
 	number={5}
 }
 
-@article{ReeQui97,
-	author={Barnaby C. Reeves and Maria Quigley},
-	title={A Review of Data-Derived Methods for Assigning Causes of Death from Verbal
-		Autopsy Data},
-	journal={International Journal of Epidemiology},
-	volume={26},
-	year={1997},
-	pages={1080-1089},
-	number={5}
-}
-
 @book{Rehnquist98,
 	author={William H. Rehnquist},
 	title={All the Laws But One: Civil Liberties in Wartime},
@@ -10157,23 +9825,6 @@ pages={706-719}
 	year={2003},
 	address={Ellen Riloff, School of Computing, University of UT, Salt Lake City, UT
 		84112; riloff@cs.utah.edu}
-}
-
-@proceedings{RilWie03,
-	editor={Ellen Riloff and Janyce Wiebe},
-	title={Learning Extraction Patterns for Subjective Expressions},
-	publisher={Conference on Empirical Methods in Natural Language Processing},
-	year={2003},
-	address={Ellen Riloff, School of Computing, University of UT, Salt Lake City, UT
-		84112; riloff@cs.utah.edu}
-}
-
-@proceedings{RilWieWil03,
-	editor={Ellen Riloff and Janyce Wiebe and Theresa Wilson},
-	title={Learning Subjective Nouns Using Extraction Pattern Bootstrapping},
-	publisher={Seventh CoNLL Conf. Edmonton},
-	year={2003},
-	month={May-June}
 }
 
 @proceedings{RilWieWil03,
@@ -10438,7 +10089,7 @@ pages={706-719}
 	number={3}
 }
 
-@article{Rosenbaum91,
+@article{Rosenbaum91b,
 	author={Paul R. Rosenbaum},
 	title={Sensitivity analysis for matched case-control studies},
 	journal={Biometrics},
@@ -10770,16 +10421,6 @@ pages={706-719}
 	pages={475-478},
 	month={Jun},
 	number={426}
-}
-
-@article{Rubin96,
-	author={Donald B. Rubin},
-	title={Multiple Imputation after 18+ Years},
-	journal= jasa,
-	volume= 91,
-	year= 1996,
-	pages={473--489},
-	number= 434
 }
 
 @article{Rubin96,
@@ -11134,16 +10775,6 @@ pages={706-719}
 	year={1998},
 	pages={545-571},
 	number={4}
-}
-
-@article{SchSin00,
-	author={Robert E. Schapire and Yoram Singer},
-	title={BoosTexter: A Boosting-based System for Text Categorization},
-	journal={Machine Learning},
-	volume={39},
-	year={2000},
-	pages={135-168},
-	number={2/3}
 }
 
 @article{SchSin00,
@@ -11801,16 +11432,6 @@ pages={706-719}
 	volume={1},
 	year={1986},
 	pages={1169-1173}
-}
-
-@article{SomZeg91,
-	author={A. Sommer and SL Zeger},
-	title={{On Estimating Efficacy from Clinical Trials.}},
-	journal={Statistics in Medicine},
-	volume={10},
-	year={1991},
-	pages={45-52},
-	number={1}
 }
 
 @article{SomZeg91,
@@ -12585,14 +12206,6 @@ pages={706-719}
   month =	 {May}
 }
 
-@unpublished{TurLit02,
-  author =	 {P.D. Turney and M.L. Littman},
-  title =	 {Unsupervised Learning of Semantic Orientation},
-  note =	 {National Research Council Canada},
-  year =	 {2002},
-  month =	 {May}
-}
-
 @article{TurMat01,
   author =	 {G. Turrell and Colin Mathers},
   title =	 {Socioeconomic inequalities in all-cause and
@@ -12610,19 +12223,6 @@ pages={706-719}
   title =	 {German big business and the rise of Hitler},
   publisher =	 {Oxford University Press},
   year =	 {1985}
-}
-
-@proceedings{Turney02,
-  editor =	 {Peter D. Turney},
-  title =	 {Thumbs Up or Thumbs Down? Semantic Orientation
-                  Applied to},
-  publisher =	 {40th Annual Meeting of the Associatin for
-                  Computational Linguistics},
-  year =	 {2002},
-  month =	 {July},
-  organization = {Institute for Information Technology},
-  address =	 {National Research Council of Canada, Ottawa,
-                  Ontario, Canada K1A0R6}
 }
 
 @proceedings{Turney02,
@@ -12659,13 +12259,6 @@ pages={706-719}
   editor =	 {Glenn H. Utter and Charles Lockhart},
   address =	 {Westport, Conn},
   edition =	 {2nd}
-}
-
-@book{Valentine64,
-  author =	 {Frederick Albert Valentine},
-  title =	 {Convex Sets},
-  publisher =	 {New York, McGraw-Hill},
-  year =	 {1964}
 }
 
 @book{Valentine64,
@@ -13102,16 +12695,6 @@ pages={706-719}
 	number={2}
 }
 
-@article{Weibe04,
-	author={Janyce M. Wiebe},
-	title={Tracking Point of View in Narrative},
-	journal={Computational Linguistics},
-	volume={20},
-	year={1994},
-	pages={233-287},
-	number={2}
-}
-
 @article{WeiCoxWil87,
 	author={Milton C. Weinstein and Pamela G. Coxson and Lawrence W. Williams and Theodore
 		M. Pass and William B Stason and Lee Goldman},
@@ -13131,7 +12714,7 @@ pages={706-719}
 	year={1986}
 }
 
-@book{Weiss86,
+@book{Weiss86b,
 	author={Noel S. Weiss},
 	title={Clinical Epidemiology: The Study of the Outcome of Illness},
 	publisher={Oxford University Press},
@@ -13361,18 +12944,6 @@ pages={706-719}
 	month={January}
 }
 
-@article{WilGouBos02,
-	author={Brian G. Williams and Eleanor Gouws and Cynthia Boschi-Pinto and Jennifer
-		Bryce and Christopher Dye},
-	title={Estimates of world-wide distribution of child deaths from acute respiratory
-		infections},
-	journal={The Lancet Infectious Diseases},
-	volume={2},
-	year={2002},
-	pages={25-32},
-	month={January}
-}
-
 @article{WilHol07,
 	author={Elizabeth Ty Wilde and Robinson Hollister},
 	title={How Close is Close Enough? Evaluating Propensity Score Matching Using Data
@@ -13544,15 +13115,6 @@ pages={706-719}
 
 @book{WuHam00,
   author =	 {Chien-Fu Wu and Michael Hamada},
-  title =	 {Experiments: Planning, analyzing and Parameter
-                  Design Optimization},
-  publisher =	 {Wiley-Interscience},
-  year =	 {2000},
-  address =	 {New York}
-}
-
-@book{WuHam00,
-  author =	 {Chien-Fu Wu and Michael Hamada},
   title =	 {Experiments: Planning, Analyzing, and Parameter
                   Design Optimization},
   publisher =	 {Wiley-Interscience},
@@ -13642,15 +13204,6 @@ pages={706-719}
   pages =	 {1500-1521},
   month =	 {September/October},
   number =	 {5}
-}
-
-@proceedings{YuHat03,
-	editor={Hong Yu and Vasileios Hatzivassiloglou},
-	title={Towards Answering Opinion Questions: Separating Facts from Opinions and
-		Identifying the Polarity of Opinion Sentences},
-	year={03},
-	organization={2003 Conference on Empirical Methods in Natural Language Processing},
-	address={Hong Yu Dept. of Computer Science columbia Univ. New York, NY 10027 hongyu@cs.columbia.edu}
 }
 
 @article{YuKeaSly98,
@@ -14030,26 +13583,6 @@ pages={706-719}
   address =	 {New York, NY}
 }
 
-@article{Blumer48,
-  title =	 {Public Opinion and Public Opinion Polling},
-  author =	 {Hubert Blumer},
-  journal =	 {American Sociological Review},
-  volume =	 {13},
-  number =	 {5},
-  pages =	 {542--549},
-  year =	 {1948}
-}
-
-@article{Converse87,
-  title =	 {{Changing Conceptions of Public Opinion in the
-                  Political Process}},
-  author =	 {Philip E. Converse},
-  journal =	 {The Public Opinion Quarterly},
-  volume =	 {51},
-  pages =	 {12--24},
-  year =	 {1987}
-}
-
 @article{LakBau01,
   author =	 {David A. Lake and Matthew A. Baum},
   title =	 {The Invisible Hand of Democracy: Political Control
@@ -14277,15 +13810,6 @@ pages={706-719}
         volume= 41,
         month={July},
 	
-}
-
-@inbook{Lustig94,
-	author={Nora Lustig},
-	title={Solidarity as a strategy of poverty alleviation},
-	year={1994},
-	publisher={Center for U.S.-Mexican Studies},
-	address={University of California, San Diego},
-        editor={Wayne Cornelius and Ann Craig and Jonathan Fox},
 }
 
 @article{Prudhomme95,
@@ -14825,23 +14349,6 @@ pages={706-719}
   number =       {1},
   pages =	 {129--146},
   year =	 {1998}
-}
-@article{ClaGilGol06,
-  title =	 {A Simple Multivariate Test for Asymmetric Hypotheses},
-  author =	 {William Roberts Clark and Mihcael J. Gilligan and Matt Golder},
-  journal =	 {Political Analysis},
-  volume =	 {14},
-  pages =	 {311--331},
-  year =	 {2006}
-}
-@article{Denrell03,
-  title =	 {Vicarious Learning, Undersampling of Failure and the Myths of Management},
-  author =	 {Jerker Denrell},
-  journal =	 {Organization Science},
-  volume =	 {14},
-  number =       {3},
-  pages =	 {227--243},
-  year =	 {2003}
 }
 @article{Wong02,
   title =	 {Did how we learn affect what we learn? Methodological bias, multimethod research and the case of econmic development},
@@ -16502,16 +16009,6 @@ pages =	 {186-200}
   pages =	 {194-207}
 }
 
-@Article{Miller01,
-  author =	 {Tim Miller},
-  title =	 {Increasing Longevity and Medicare Expenditures},
-  journal =	 {Demography},
-  year =	 {2001},
-  volume =	 {38},
-  number =	 {2},
-  pages =	 {215-226}
-}
-
 @unpublished{Caldis08,
   author =	 {Todd G. Caldis},
   title =	 {The Long-Term Projection Assumptions for Medicare
@@ -16792,15 +16289,6 @@ pages =	 {186-200}
   number =	 {4/5}
 }
 
-@article{DasNewVel03,
-  title =	 {Nonparametric Estimation of Sample Selection Models},
-  author =	 {Mitali Das and Whitney K. Newey and Francis Vella},
-  journal =	 {Review of Economic Studies},
-  volume =	 {70},
-  year =	 {2003},
-  pages =	 {33--58}
-}
-
 @article{HerHei04,
   title =	 {The Distribution of R&D Subsidies and Its Effect on
                   the Final Outcome of Innovation Policy},
@@ -16812,18 +16300,6 @@ pages =	 {186-200}
   year =	 {2004}
 }
 
-@article{AbaDruHer01,
-  title =	 {Implementing Matching Estimators for Average
-                  Treatment Effects in Stata},
-  author =	 {Alberto Abadie and David Drukker and Jane Leber Herr
-                  and Guido W. Imbens},
-  journal =	 {The Stata Journal},
-  volume =	 {1},
-  year =	 {2001},
-  pages =	 {1--18},
-  number =	 {1}
-}
-
 @unpublished{BryCapLuc02,
   title =	 {Why so Unhappy? The Effect of Union Membership on
                   Job Satisfaction},
@@ -16833,20 +16309,6 @@ pages =	 {186-200}
   note =	 {Policy Studies Institute and Centre for Economic
                   Performance}
 }
-
-@article{DunAuMil03,
-  title =	 {Derivation and Validation of a Clinical Scoring
-                  System to Predict the Need for an Intra-Aortic
-                  Balloon Pump in Patients Undergoing Adult Cardiac
-                  Surgery},
-  author =	 {Joel Dunning and JKK Au and RWJ Millner and AJ
-                  Levine},
-  journal =	 {Interactive Cardiovascular and Thoracic Surgery},
-  volume =	 {2},
-  year =	 {2003},
-  pages =	 {639--643}
-}
-
 
 @Book{GlaStr99,
   author =	 {Barney G. Glaser and Anselm L. Strauss},
@@ -17372,16 +16834,6 @@ pages =	 {186-200}
   volume =	 53,
   number =	 3,
   pages =	 {515-529}
-}
-
-@Article{TulLiBoe00,
-  author =	 {Tuljapurkar, Shripad and Li, Nan and Boe, Carl},
-  title =	 {A universal pattern of mortality decline in the $G7$
-                  countries},
-  journal =	 {Nature},
-  year =	 2000,
-  volume =	 405,
-  pages =	 {789-792}
 }
 
 @Article{Boyer47,
