--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1675,7 +1675,7 @@ pages={1037--1060},
   note =	 {{http://gking.harvard.edu/files/abs/stoch-abs.shtml}}
 }
 
-@article{King91e,
+@article{King91g,
   author =	 {Gary King},
   title =	 {Calculating Standard Errors of Predicted Values
                   based on Nonlinear Functional Forms},
