--- a/gk.bib
+++ b/gk.bib
@@ -2136,7 +2136,7 @@ howpublished = {NBER}
 @article{Chafee19,
 	author={Zechariah Chafee},
 	title={Freedom of Speech in War Time},
-	journal= hlr,
+	journal=Harvard Law Review,
 	volume= 32,
 	year={1919},
 	pages={932--??}
@@ -3152,15 +3152,6 @@ howpublished = {NBER}
 	year={1990},
 	month={April},
 	address={New York}
-}
-
-@article{Dorsen89,
-	author={Norman Dorsen},
-	title={Here and There: Foreign Affairs and Civil Liberties},
-	journal= ajil,
-	volume= 83,
-	year={1989},
-	pages={840--??}
 }
 
 @article{DowMan90,
@@ -6430,16 +6421,6 @@ howpublished = {NBER}
 	month={September},
 	number= 435
 }
-
-@article{KatTri02,
-	author={Neal K. Katyal and Laurence H. Tribe},
-	title={Waging War, Deciding Guilt: Trying the Military Tribunals},
-	journal= ylj,
-	volume= 111,
-	year={2002},
-	pages={1259--1310}
-}
-
 
 @article{Kawada03,
 	author={Tomoyuki Kawada},
