--- a/gk.bib
+++ b/gk.bib
@@ -2134,12 +2134,12 @@ howpublished = {NBER}
 }
 
 @article{Chafee19,
-	author={Zechariah Chafee},
-	title={Freedom of Speech in War Time},
-	journal=Harvard Law Review,
-	volume= 32,
-	year={1919},
-	pages={932--??}
+  author =       {Zechariah Chafee},
+  title =        {Freedom of Speech in War Time},
+  journal =      {Harvard Law Review},
+  volume =       32,
+  year =         {1919},
+  pages =        {932--??}
 }
 
 @book{Chafee41,
