--- a/gk.bib
+++ b/gk.bib
@@ -2125,12 +2125,12 @@ howpublished = {NBER}
 }
 
 @article{CavTre94,
-	author={W.B. Cavnar and J.M. Trenkle},
-	title={{N-Gram-Based Text Categorization}},
-	journal={Proceedings of the Third Annual Symposium on Document Analysis and Information
-		Retrival},
-	year={1994},
-	pages={161-175}
+  author =       {W.B. Cavnar and J.M. Trenkle},
+  title =        {{N-Gram-Based Text Categorization}},
+  journal =      {Proceedings of the Third Annual Symposium on
+                  Document Analysis and Information Retrival},
+  year =         {1994},
+  pages =        {161-175}
 }
 
 @book{Chafee41,
