--- a/gk.bib
+++ b/gk.bib
@@ -7445,21 +7445,23 @@ pages={706-719}
 }
 
 @article{LicLipDan92,
-	author={Allen S. Lichter and Marc E. Lippman and David N. Danforth Jr and Teresa
-		d'Angelo and Seth M. Steinberg and Ernest deMoss and Harold D. MacDonald
-		and Cheryl M. Reichert and Maria Merino and Sandra M. Swain and Kenneth
-		Cowan and Lynn H. Gerber and Judith L. Bader and Peggie A. Findlay and
-		Wendy Schain and Catherine R. Gorrell and Karen Straus and Steven A. Rosenberg
-		and Eli Glatstein},
-	title={Mastectomy Versus Breast-Conserving Therapy in the Treatment of Stage I
-		and II Carcinoma of the Breast: A Randomized Trial at the National Cancer
-		Institute},
-	journal={Journal of Clinical Oncology},
-	volume= 10,
-	year= 1992,
-	pages={976-983},
-	month={June},
-	number= 6
+  author =       {Allen S. Lichter and Marc E. Lippman and David N.
+                  Danforth Jr and Teresa d'Angelo and Seth M.
+                  Steinberg and Ernest deMoss and Harold D. MacDonald
+                  and Cheryl M. Reichert and Maria Merino and Sandra
+                  M. Swain and Kenneth Cowan and Lynn H. Gerber and
+                  Judith L. Bader and Peggie A. Findlay and Wendy
+                  Schain and Catherine R. Gorrell and Karen Straus and
+                  Steven A. Rosenberg and Eli Glatstein},
+  title =        {Mastectomy Versus Breast-Conserving Therapy in the
+                  Treatment of Stage I and II Carcinoma of the Breast:
+                  A Randomized Trial at the National Cancer Institute},
+  journal =      {Journal of Clinical Oncology},
+  volume =       10,
+  year =         1992,
+  pages =        {976-983},
+  month =        {June},
+  number =       6
 }
 
 @article{LilPer94,
