--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2021,7 +2021,7 @@ pages={1037--1060},
   journal =	 { },
   year =	 {2009},
   note =	 {\underline{hdl:1902.1/12730}
-                  UNF:3:CKs4T0iVYxP36LQSMgAkuw== Murray Research
+                  [UNF:3:CKs4T0iVYxP36LQSMgAkuw==] Murray Research
                   Archive [Distributor]}
 }
 
