--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2062,7 +2062,7 @@ pages={1037--1060},
   title =	 {Cause of Death Data},
   year =	 {2006},
   note =	 {{\underline{hdl:1902.1/UOVMCPSWOL}
-                  UNF:3:9JU+SmVyHgwRhAKclQ85Cg== Murray Research
+                  [UNF:3:9JU+SmVyHgwRhAKclQ85Cg==] Murray Research
                   Archive [Distributor]}}
 }
 
