--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -321,7 +321,7 @@ pages={1037--1060},
                   Correct Interpersonal Incomparability},
   journal =	 {Public Opinion Quarterly},
   year =	 {2010},
-  pages =	 {1-22},
+  pages =	 {1--22},
   note =         {{http://gking.harvard.edu/files/abs/implement-abs.shtml}}
 }
 
@@ -988,7 +988,7 @@ pages={1037--1060},
   volume =	 {8},
   year =	 {2003},
   number =	 {2},
-  note =	 {{http://gking.harvard.edu/stats.shtml#relogit}}
+  note =	 {{http://gking.harvard.edu/stats.shtml\#relogit}}
 }
 
 @article{TomWitKin03,
@@ -2061,9 +2061,9 @@ pages={1037--1060},
   author =	 {Federico Girosi and Gary King},
   title =	 {Cause of Death Data},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/UOVMCPSWOL}
+  note =	 {\underline{hdl:1902.1/UOVMCPSWOL}
                   [UNF:3:9JU+SmVyHgwRhAKclQ85Cg==] Murray Research
-                  Archive [Distributor]}}
+                  Archive [Distributor]}
 }
 
 @article{HoImaKin06,
@@ -2084,7 +2084,7 @@ pages={1037--1060},
                   Dissolution in Parliamentary Democracies},
   year =	 {2006},
   note =	 {{\underline{hdl:1902.1/RMPXNUSBBS}
-                  UNF:3:lfKIeFJKgejkOzXEY1i6lw== Murray Research
+                  [UNF:3:lfKIeFJKgejkOzXEY1i6lw== Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2305,7 +2305,7 @@ pages={1037--1060},
                   Nominations},
   year =	 {1990},
   note =	 {{\underline{hdl:1902.1/BUJXCEPXQK}
-                  UNF:3:OdFPcQcvfO5hc3WJ5ty8vQ== Murray Research
+                  [UNF:3:OdFPcQcvfO5hc3WJ5ty8vQ==] Murray Research
                   Archive [Distributor]}}
 }
 
@@ -2376,7 +2376,7 @@ pages={1037--1060},
   title =	 {CLARIFY: Software for Interpreting and Presenting
                   Statistical Results},
   year =	 {1998-2005},
-  note =	 {{http://gking.harvard.edu/stats.shtml#clarify}}
+  note =	 {{http://gking.harvard.edu/stats.shtml\#clarify}}
 }
 
 @misc{HonJosKin98,
@@ -2394,14 +2394,14 @@ pages={1037--1060},
                   likelihood models in Unifying Political Methodology:
                   The Likelihood Theory of Statistical Inference},
   year =	 {1998},
-  note =	 {{http://gking.harvard.edu/stats.shtml#maxlik}}
+  note =	 {{http://gking.harvard.edu/stats.shtml\#maxlik}}
 }
 
 @article{King96b,
   author =	 {Gary King},
   title =	 {EI: Program for Ecological Inference},
   year =	 {1996-2003},
-  note =	 {{http://gking.harvard.edu/stats.shtml#ei}}
+  note =	 {{http://gking.harvard.edu/stats.shtml\#ei}}
 }
 
 @article{GelKin92,
@@ -2409,7 +2409,7 @@ pages={1037--1060},
   title =	 {JudgeIt: A Program for Evaluating Electoral Systems
                   and Redistricting Plans},
   year =	 {1992-2002},
-  note =	 {{http://gking.harvard.edu/stats.shtml#judgeit}}
+  note =	 {{http://gking.harvard.edu/stats.shtml\#judgeit}}
 }
 
 @article{HoImaKin07a,
