--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2066,6 +2066,7 @@ pages={1037--1060},
                   Archive [Distributor]}
 }
 
+
 @article{HoImaKin06,
   author =	 {Daniel E. Ho and Kosuke Imai and Gary King and
                   Elizabeth A. Stuart},
@@ -2102,9 +2103,9 @@ pages={1037--1060},
   title =	 {Replication data for: Detecting Model Depedence in
                   Statistical Inference: A Response},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/FGSRBXXIYT}
+  note =	 {\underline{hdl:1902.1/FGSRBXXIYT}
                   UNF:3:K4/CgnMYDMV6izc5RVOZTA== Murray Research
-                  Archive [Distributor]}}
+                  Archive [Distributor]}
 }
 
 @article{KinZen06d,
