--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2104,7 +2104,7 @@ pages={1037--1060},
                   Statistical Inference: A Response},
   year =	 {2006},
   note =	 {\underline{hdl:1902.1/FGSRBXXIYT}
-                  UNF:3:K4/CgnMYDMV6izc5RVOZTA== Murray Research
+                  [UNF:3:K4/CgnMYDMV6izc5RVOZTA==] Murray Research
                   Archive [Distributor]}
 }
 
@@ -2113,9 +2113,9 @@ pages={1037--1060},
   title =	 {Replication data for: When Can History be Our Guide?
                   The Pitfalls of Counterfactual Inference},
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/DXRXCFAWPK}
-                  UNF:3:DaYlT6QSX9r0D50ye+tXpA== Murray Research
-                  Archive [Distributor]}}
+  note =	 {\underline{hdl:1902.1/DXRXCFAWPK}
+                  [UNF:3:DaYlT6QSX9r0D50ye+tXpA==] Murray Research
+                  Archive [Distributor]}
 }
 
 @article{KinZen06e,
@@ -2123,9 +2123,9 @@ pages={1037--1060},
   title =	 {Replication data for: The Dangers of Extreme
                   Counterfactuals },
   year =	 {2006},
-  note =	 {{\underline{hdl:1902.1/UTVMBVNGMX}
-                  UNF:3:ytKKNjK+yR8Pq3H0RcV6eg== Murray Research
-                  Archive [Distributor]}}
+  note =	 {\underline{hdl:1902.1/UTVMBVNGMX}
+                  [UNF:3:ytKKNjK+yR8Pq3H0RcV6eg==] Murray Research
+                  Archive [Distributor]}
 }
 
 @article{EpsHoKin05b,
